[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinocchio = "0.9.0"
pinocchio-system = "0.3.0"

[dev-dependencies]
mollusk-svm = "0.4.1"
mollusk-svm-programs-memo = "0.4.1"
mollusk-svm-programs-token = "0.4.1"
solana-account = "2.2.1"
solana-feature-set = "2.2.5"
solana-precompiles = "2.2.2"
solana-program = "2.3.0"
solana-pubkey = "2.4.0"
solana-sdk = "2.3.1"

[[test]]
name = "tests"
